<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.project.eddsato.quizapp.MainActivity"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- QUESTION 01 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question01Header"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question01"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:id="@+id/rg_answers01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:id="@+id/rb_zelda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1_Zelda"/>
                    <RadioButton
                        android:id="@+id/rb_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1_Link"/>
                    <RadioButton
                        android:id="@+id/rb_mario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1_Mario"/>
                </RadioGroup>

                <!-- QUESTION 02 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question02Header"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question02"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:id="@+id/rg_answers02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:id="@+id/rb_10hearts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2_10"/>
                    <RadioButton
                        android:id="@+id/rb_13hearts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2_13"/>
                    <RadioButton
                        android:id="@+id/rb_15hearts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2_15"/>
                </RadioGroup>

                <!-- QUESTION 03 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question03Header"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question03"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:id="@+id/rg_answers03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:id="@+id/rb_6years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3_6yo"/>
                    <RadioButton
                        android:id="@+id/rb_8years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3_8yo"/>
                    <RadioButton
                        android:id="@+id/rb_120years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3_12yo"/>
                </RadioGroup>

                <!-- QUESTION 04 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question04Header"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question04"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cb_daruk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Daruk"/>
                        <CheckBox
                            android:id="@+id/cb_epona"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Epona"/>
                        <CheckBox
                            android:id="@+id/cb_mipha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Mipha"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cb_revali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Revali"/>
                        <CheckBox
                            android:id="@+id/cb_sheik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Sheik"/>
                        <CheckBox
                            android:id="@+id/cb_urbosa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Q4_Urbosa" />

                    </LinearLayout>

                </LinearLayout>

                <!-- QUESTION 05 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question05Header"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question05"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/et_primalEvil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Type here"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="submitQuiz"
                    android:text="@string/button"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
